Доработал сборку службы в докере